terraform/GKE/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: qse-app
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: qse-app
  type: NodePort
