terraform/GKE/app/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qse-app-ingress
spec:
  backend:
    serviceName: qse-app
    servicePort: 80
